# automobile-price-predictor

./: .dockerignore  .gitignore  Dockerfile  README.md  automobile.py  main.py  model.pkl  notes.txt  processing.pkl  project-requirements-group-a.docx  pyproject.toml  requirements.txt
templates/: index.html
